--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,16 @@
     <meta charset="UTF-8">
 </head>
 <body>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	{% include "header.html" %}
     {% block content %}{% endblock %}
     {% include "footer.html" %}
+    <script type="text/javascript">
+    	window.onbeforeunload = function(event) {
+    		$(document).ajaxStop(function() {
+    			console.log('Stopping all ajax');
+    		});
+    	}
+    </script>
 </body>
 </html>
