--- a/templates/base.html
+++ b/templates/base.html
@@ -6,16 +6,9 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.1/react.js"></script>
 	{% include "header.html" %}
     {% block content %}{% endblock %}
     {% include "footer.html" %}
-    <script type="text/javascript">
-    	window.onbeforeunload = function(event) {
-    		$(document).ajaxStop(function() {
-    			console.log('Stopping all ajax');
-    		});
-    	}
-    </script>
 </body>
 </html>
