--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,19 @@
-<ul>
-	<li><a href="{% url 'home' %}">Home</a></li>
-	{% if not user.is_authenticated %}
-		<li><a href="{% url 'social:begin' 'battlenet-oauth2' %}">Sign in</a></li>
-	{% else %}
-		<li><a href="{% url 'logout' %}">Logout</a></li>
-	{% endif %}
-</ul>
-<hr>
+<div class="header clearfix">
+    <nav>
+        <ul class="nav nav-pills pull-right">
+            <li role="presentation">
+                <a href="{% url 'home' %}">Home</a>
+            </li>
+            {% if not user.is_authenticated %}
+                <li role="presentation">
+                    <a href="{% url 'social:begin' 'battlenet-oauth2' %}">Sign in</a>
+                </li>
+            {% else %}
+                <li role="presentation">
+                    <a href="{% url 'logout' %}">Logout</a>
+                </li>
+            {% endif %}
+        </ul>
+    </nav>
+    <h3 class="text-muted">HeadHunter</h3>
+</div>
