--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,13 @@
+{% load staticfiles %}
+
 <ul>
 	<li><a href="{% url 'home' %}">Home</a></li>
+	<li><a href="{% url 'bounty-list' %}">Bounties</a></li>
 	{% if not user.is_authenticated %}
 		<li><a href="{% url 'social:begin' 'battlenet-oauth2' %}">Sign in</a></li>
 	{% else %}
 		<li><a href="{% url 'logout' %}">Logout</a></li>
+		<div style="display:none" id="logged-as"></div>
 	{% endif %}
 </ul>
 <hr>
