--- a/templates/header.html
+++ b/templates/header.html
@@ -6,8 +6,8 @@
 	{% if not user.is_authenticated %}
 		<li><a href="{% url 'social:begin' 'battlenet-oauth2' %}">Sign in</a></li>
 	{% else %}
+		<li style="display:none" class="battletag"></li>
 		<li><a href="{% url 'logout' %}">Logout</a></li>
-		<div style="display:none" id="logged-as"></div>
 	{% endif %}
 </ul>
 <hr>
