--- a/templates/header.html
+++ b/templates/header.html
@@ -1,13 +1,31 @@
 {% load staticfiles %}
-
-<ul>
-	<li><a href="{% url 'home' %}">Home</a></li>
-	<li><a href="{% url 'bounty-list' %}">Bounties</a></li>
-	{% if not user.is_authenticated %}
-		<li><a href="{% url 'social:begin' 'battlenet-oauth2' %}">Sign in</a></li>
-	{% else %}
-		<li style="display:none" class="battletag"></li>
-		<li><a href="{% url 'logout' %}">Logout</a></li>
-	{% endif %}
-</ul>
-<hr>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">HeadHunter</a>
+    </div>
+    <div class="collapse navbar-collapse">
+    	<ul class="nav navbar-nav navbar-left">
+    		{% if user.is_authenticated %}
+        		<button disabled="disabled" type="button" class="btn btn-default navbar-btn battletag">Loading...</button>
+        	{% endif %}
+    	</ul>
+    	<ul class="nav navbar-nav navbar-right">
+    	{% if not user.is_authenticated %}
+			<li><a href="{% url 'social:begin' 'battlenet-oauth2' %}">Sign in</a></li>
+		{% else %}
+        	<li><a href="{% url 'bounty-list' %}">Bounties</a></li>
+        	<li><a href="{% url 'bounty-add' %}">Add</a></li>
+        	<li><a href="{% url 'logout' %}">Logout</a></li>
+		{% endif %}
+      </ul>
+    </div>
+  </div>
+ </nav>
