--- a/templates/header.html
+++ b/templates/header.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">HeadHunter</a>
+      <a class="navbar-brand" href="{% url 'home' %}">HeadHunter</a>
     </div>
     <div class="collapse navbar-collapse">
     	<ul class="nav navbar-nav navbar-left">
