Change loading text

--- a/templates/header.html
+++ b/templates/header.html
@@ -14,7 +14,7 @@
     <div class="collapse navbar-collapse">
     	<ul class="nav navbar-nav navbar-left">
     		{% if user.is_authenticated %}
-        		<button disabled="disabled" type="button" class="btn btn-default navbar-btn battletag">Loading...</button>
+        		<button disabled="disabled" type="button" class="btn btn-default navbar-btn battletag">Loading data from Blizzard...</button>
         	{% endif %}
     	</ul>
     	<ul class="nav navbar-nav navbar-right">
