Change search button color

--- a/templates/bounties/list.html
+++ b/templates/bounties/list.html
@@ -52,7 +52,7 @@
   <br>
 
   <button
-      class="btn btn-default btn-lg btn-block"
+      class="btn btn-primary btn-lg btn-block"
       id="search">
     Search me bounties !
   </button>
